Criação da lista de disciplinas
Criação da lista de disciplinas

--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Disciplinas por Módulo - 2022</title>
+    <title>Lista de Disciplinas por Módulo</title>
 </head>
 
 <body>
     <header>
-        <h1>Lista de Disciplinas por Módulo - 2022</h1>
+        <h1>Lista de Disciplinas por Módulo</h1>
     </header>
-
+    <main>
+        <section>
+            <div id="modulo51">
+                <h2>Módulo 51 - 2022</h2>
+                <p>Período 21/02/2022 a 29/04/2022</p>
+                    <div>
+                        <h3>Disciplina - Formação Sócio Cultural e Ética</h3>
+                        <p></p>
+                    </div>
+            </div>
+            <div id="modulo52">
+                <h2>Módulo 52 - 2022</h2>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>Todos os direitos reservados a Rosana Mascena - RA: 21003483-5&copy;</p>
     </footer>
