Atividade com a estrutura HTML e CSS completa
Atividade com a estrutura HTML e CSS completa

--- a/index.html
+++ b/index.html
@@ -1,34 +1,144 @@
-<!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Disciplinas por Módulo</title>
-</head>
+  </head>
 
-<body>
+  <body style="margin: 0; font-family: Montserrat, sans-serif">
     <header>
-        <h1>Lista de Disciplinas por Módulo</h1>
+      <h1
+        style="
+          padding: 20px;
+          margin: 0;
+          background-color: #2E8B57;
+          text-align: center;
+          color: #FFFFFF;
+        "
+      >
+        Lista de Disciplinas por Módulo
+      </h1>
+      <br />
     </header>
-    <main>
-        <section>
-            <div id="modulo51">
-                <h2>Módulo 51 - 2022</h2>
-                <p>Período 21/02/2022 a 29/04/2022</p>
-                    <div>
-                        <h3>Disciplina - Formação Sócio Cultural e Ética</h3>
-                        <p></p>
-                    </div>
+    <main style="margin: 0 80px">
+      <section
+      style="
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      "
+      >
+        <div id="modulo51">
+          <h2
+            style="background-color: #8FBC8F; border-radius: 8px; padding: 8px"
+          >
+            Módulo 51 - 2022
+          </h2>
+          <p>Período 21/02/2022 a 29/04/2022</p>
+          <div
+            style="
+              display: flex;
+              align-items: flex-start;
+              flex-wrap: wrap;
+              justify-content: space-between;
+            "
+          >
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Formação Sócio Cultural e Ética I</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Estudo de acontecimentos socioculturais (relações
+                étnico-raciais, a história e a cultura afro-brasileira e
+                indígena políticas educacionais da valorização das diversidades
+                e dos direitos humanos. Políticas de Educação Ambiental e
+                Sustentabilidade) que permeiam a sociedade contemporânea visando
+                o desenvolvimento crítico dos sujeitos que a formam e a relação
+                ética com esses temas.
+              </p>
             </div>
-            <div id="modulo52">
-                <h2>Módulo 52 - 2022</h2>
+
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Fundamentos de Redes de Computadores</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Conhecer os variados tipos de redes de computadores, suas
+                tecnologias atuais e futuras, equipamentos de rede e modelos de
+                referência. Familiarizar-se com os protocolos e as arquiteturas
+                de redes mais utilizadas na atualidade. Padrões IEEE para redes
+                locais. Camadas de rede, transporte e aplicação do TCP/IP.
+              </p>
             </div>
-        </section>
+
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Design Gráfico</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Design gráfico, é uma profissão que envolve a criação de
+                comunicações visuais em nome de um cliente com necessidades
+                muito específicas. Neste consentimento, o designer deve se
+                direcionar para as necessidades de seu cliente primeiramente, o
+                que as vezes envolve decisões de design que não são alinhadas
+                com sua visão pessoal.
+              </p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div id="modulo52">
+          <h2
+            style="background-color: #8FBC8F; border-radius: 8px; padding: 8px"
+          >
+            Módulo 52 - 2022
+          </h2>
+          <p>Período 02/05/2022 a 08/07/2022</p>
+          <div
+            style="
+              display: flex;
+              align-items: flex-start;
+              flex-wrap: wrap;
+              justify-content: space-between;
+            "
+          >
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Formação Sócio Cultural e Ética II</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Estudo de acontecimentos socioculturais (relações
+                étnico-raciais, a história e a cultura afro-brasileira e
+                indígena políticas educacionais da valorização das diversidades
+                e dos direitos humanos. Políticas de Educação Ambiental e
+                Sustentabilidade) que permeiam a sociedade contemporânea visando
+                o desenvolvimento crítico dos sujeitos que a formam e a relação
+                ética com esses temas.
+              </p>
+            </div>
+
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Estrutura de Dados I</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Representação básica de dados; estruturas lógicas e suas
+                implementações; tabelas; listas lineares: listas ordenadas,
+                listas encadeadas, listas com disciplinas de acesso (pilha e
+                fila); ponteiros; implementação de estruturas; teoria dos
+                grafos.
+              </p>
+            </div>
+
+            <div style="display: inline-block; max-width: 49%">
+              <h3>Disciplina - Programação Front-end</h3>
+              <p style="color: #4a4a4a; font-size: 15px">
+                Conceitos básicos de webdesign, Linguagens de marcação HTML
+                (versão 05) e CSS (versão 03),Linguagem de programação
+                Javascript e biblioteca Jquery.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <br />
     <footer>
-        <p>Todos os direitos reservados a Rosana Mascena - RA: 21003483-5&copy;</p>
+      <p style="text-align: center; padding-top: 40px">
+        Todos os direitos reservados a Rosana Mascena - RA: 21003483-5 ©
+      </p>
     </footer>
-    
-</body>
+  </body>
 </html>
